# tin_project

./: .gitignore  CMakeLists.txt  README  README.md  protocol_codes.h  ts.cpp
Client/: AuthManager.cpp  AuthManager.h  CMakeLists.txt  ConsoleMenu.cpp  ConsoleMenu.h  RequestManager.cpp  RequestManager.h  TicketManager.cpp  TicketManager.h  config.h  main.cpp
SN/: CMakeLists.txt  RequestManager.cpp  RequestManager.h  TicketCorectnessTester.cpp  TicketCorectnessTester.h  TicketCorrectnessTester.cpp  TicketCorrectnessTester.h  TicketDecryptor.cpp  TicketDecryptor.h  config.h  logger.properties  main.cpp
TS/: CMakeLists.txt  DBManager.cpp  DBManager.h  PrivilegeManager.cpp  PrivilegeManager.h  RequestManager.cpp  RequestManager.h  Ticket.cpp  Ticket.h  config.h  main.cpp  service.txt  time.txt  user.txt
